Cherry pick branch 'genexuslabs:remove-useconcmarksweeper' into beta